--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -1,5 +1,17 @@
 @import "tailwindcss";
 
+@font-face {
+    font-family: "Patrick Hand";
+    src: url("~assets/font/patrick-hand-regular.woff2") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@theme {
+    --font-patrickHand: "Patrick Hand", "sans-serif";
+}
+
 @layer base {
     html::-webkit-scrollbar {
         @apply w-2 bg-neutral-950;
