--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -10,6 +10,18 @@
 
 @theme {
     --font-patrickHand: "Patrick Hand", "sans-serif";
+    --animate-slideInLeft: slideInLeft 0.25s ease-in forwards;
+
+    @keyframes slideInLeft {
+        from {
+            transform: translate3d(-100%, 0, 0);
+            opacity: 0;
+        }
+        to {
+            transform: translate3d(0, 0, 0);
+            opacity: 1;
+        }
+    }
 }
 
 @layer base {
