--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -11,6 +11,9 @@
 @theme {
     --font-patrickHand: "Patrick Hand", "sans-serif";
     --animate-slideInLeft: slideInLeft 0.25s ease-in forwards;
+    --animate-fadeIn: fadeIn 0.5s ease-in;
+    --animate-backInDown: backInDown 0.75s ease-in;
+    --animate-backInUp: backInUp 0.75s ease-in;
 
     @keyframes slideInLeft {
         from {
@@ -19,6 +22,50 @@
         }
         to {
             transform: translate3d(0, 0, 0);
+            opacity: 1;
+        }
+    }
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+    @keyframes backInDown {
+        0% {
+            transform: translateY(-75rem) scale(0.7);
+            opacity: 0.7;
+        }
+        80% {
+            transform: translateY(0) scale(0.7);
+            opacity: 0.7;
+        }
+        100% {
+            transform: scale(1);
+            opacity: 1;
+        }
+    }
+    @keyframes backInUp {
+        0% {
+            transform: translateY(75rem) scale(0.7);
+            opacity: 0.7;
+        }
+        80% {
+            transform: translateY(0) scale(0.7);
+            opacity: 0.7;
+        }
+        100% {
+            transform: scale(1);
             opacity: 1;
         }
     }
